# bookbot

./: .gitignore  README.md  main.py  pyproject.toml  stats.py
bookbot/: cli.py  core.py  main.py
